--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -121,7 +121,7 @@
 
   &__mouse-scroll-cont {
     position: absolute;
-    bottom: 3rem;
+    bottom: 1rem;
     left: 50%;
     transform: translateX(-50%);
 
